force-app/main/default/objects/OTP_Config__mdt/OTP_Config__mdt.object-meta.xml
<CustomObject>
    <description>OTP Configuration - length and validity</description>
    <label>OTP Config</label>
    <pluralLabel>OTP Configs</pluralLabel>
</CustomObject>