force-app/main/default/objects/OTP_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this OTP Configuration</description>
    <inlineHelpText>Description of this OTP Configuration</inlineHelpText>
    <label>Description</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>