force-app/main/default/objects/OTP_Config__mdt/fields/OTP_Length__c.field-meta.xml
<CustomField>
    <fullName>OTP_Length__c</fullName>
    <description>Length of OTP</description>
    <inlineHelpText>Length of OTP</inlineHelpText>
    <label>OTP Length</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>