force-app/main/default/objects/OTP_Config__mdt/fields/OTP_Validity__c.field-meta.xml
<CustomField>
    <fullName>OTP_Validity__c</fullName>
    <description>OTP Validity in seconds</description>
    <inlineHelpText>OTP Validity in seconds</inlineHelpText>
    <label>OTP Validity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>