force-app/main/default/objects/OTP_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OTP_Length__c</columns>
    <columns>OTP_Validity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>